--- a/resources/js/vue/pages/publics/home/home.html
+++ b/resources/js/vue/pages/publics/home/home.html
@@ -8,6 +8,12 @@
     
     <v-row>
         <v-col>
+            <v-sheet>
+                کاربر گرامی، به سامانه مراقبت و نگهداری ثمین خوش آمدید.
+                <br>
+                <br>
+                <v-btn color="primary" title="مشاهده اسناد" :to="{name:'user.documents'}">مشاهده اسناد</v-btn>
+            </v-sheet>
         </v-col>
     </v-row>
 </v-container>
