--- a/resources/js/vue/pages/publics/home/home.html
+++ b/resources/js/vue/pages/publics/home/home.html
@@ -13,6 +13,7 @@
                 <br>
                 <br>
                 <v-btn color="primary" title="مشاهده اسناد" :to="{name:'user.documents'}">مشاهده اسناد</v-btn>
+                <v-btn color="primary" title="همکاری" :to="{name:'user.jobs'}">همکاری</v-btn>
             </v-sheet>
         </v-col>
     </v-row>
