--- a/resources/js/vue/pages/publics/home/home.html
+++ b/resources/js/vue/pages/publics/home/home.html
@@ -25,7 +25,7 @@
                         به محدوده کاربری نرم افزار خدمات پرستاری ثمین خوش آمدید، لطفا از بخش منو سایت وارد بخش خدمات مورد نظر خود شوید.
                     </div>
                     <div class="text-center mt-5">
-                        <v-btn color="blue" :to="{name:'user.documents'}" class="me-1">مشاهده مستندات</v-btn>
+                        <v-btn color="blue" :to="{name:'user.documents'}" class="me-1">مشاهده پرونده پزشکی</v-btn>
                         <v-btn color="blue" :to="{name:'user.jobs'}">همکاری با ثمین پلاس</v-btn>
                     </div>
                   
